--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,4 @@ edition = "2021"
 serde = { version = "1.0.136", features = ["derive"]}
 serde_yaml = "0.8.23"
 crc-any = "2.4.2"
+tokio = {version = "1.17.0", features = ["full"]}
